stock platos, listar reservas finalizado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,12 @@
               Crear plato
             </mat-list-option>
           </a>
+
+          <a class="nav-link" routerLink="/listar-reservas">
+            <mat-list-option>
+              Listar reservas
+            </mat-list-option>
+          </a>
         </div>
 
         <a class="nav-link" routerLink="/reserva">
@@ -26,6 +32,8 @@
             Hacer reserva
           </mat-list-option>
         </a>
+
+
       </ng-container>
 
     </mat-selection-list>
