--- a/src/app/componentes/reserva/reserva.component.html
+++ b/src/app/componentes/reserva/reserva.component.html
@@ -262,5 +262,5 @@
 </div>
 
 <!-- SPINNER -->
-<mat-progress-spinner [mode]="'indeterminate'" *ngIf="loading$ | async" [color]="color">
+<mat-progress-spinner  [diameter]="50" [mode]="'indeterminate'" *ngIf="loading$ | async" [color]="color">
 </mat-progress-spinner>
