añadida opción de toggle sidebar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <mat-sidenav-container class="example-container">
-  <mat-sidenav mode="side" opened class="example-sidenav" [fixedInViewport]="false" [fixedTopGap]="0"
+  <mat-sidenav [opened]="sidebarState" mode="side" opened class="example-sidenav" [fixedInViewport]="false" [fixedTopGap]="0"
     [fixedBottomGap]="0">
 
     <mat-selection-list [multiple]="false">
