--- a/src/app/componentes/plato/crear-plato/crear-plato.component.html
+++ b/src/app/componentes/plato/crear-plato/crear-plato.component.html
@@ -1,7 +1,7 @@
 <div class="crearPlatoImg">
   <div class="container loginContainer">
     <div class="row">
-      <span class="loginTitle">Crea nuevo plato aquí</span>
+      <span class="loginTitle">Crea nuevo plato:</span>
     </div>
 
     <div class="row">
